--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,11 +42,42 @@
         </div>
     </header>
 
+    <!-- Login Modal -->
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Search </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-sm-12">
+                                    <label class="sr-only" for="exampleInputEmail3">Keywords</label>
+                                    <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter Keywords">
+                            </div>
+                            <!-- <div class="col-sm-auto"> -->
+                                <!-- <div class="form-check"> -->
+                                    <!-- <input class="form-check-input" type="checkbox"> -->
+                                    <!-- <label class="form-check-label"> Alphabetic Order -->
+                                    <!-- </label> -->
+                                <!-- </div> -->
+                            <!-- </div> -->
+                        </div>
+                        <div class="form-row">
+                            <button type="submit" class="btn btn-primary btn-sm ml-1">Search</button>        
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Products Cards -->
     <div class="container">
         <div class="row" id="products">
-            <!-- <div class="col->
-
-            </div> -->
             
         </div>
     </div>
