--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,7 +33,7 @@
                 </div> -->
                 
                 <span class="navbar-text ml-auto">
-                    <a id="searchButton" role="button" class="btn">
+                    <a id="searchToggleButton" role="button" class="btn">
                     <!-- data-toggle="modal" data-target="#loginModal"> -->
                         <span class="fa fa-search"></span> Search
                     </a>
@@ -42,8 +42,8 @@
         </div>
     </header>
 
-    <!-- Login Modal -->
-    <div id="loginModal" class="modal fade" role="dialog">
+    <!-- Search Modal -->
+    <div id="searchModal" class="modal fade" role="dialog">
         <div class="modal-dialog modal-lg" role="content">
             <!-- Modal content-->
             <div class="modal-content">
@@ -55,8 +55,8 @@
                     <form>
                         <div class="form-row">
                             <div class="form-group col-sm-12">
-                                    <label class="sr-only" for="exampleInputEmail3">Keywords</label>
-                                    <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter Keywords">
+                                    <label class="sr-only" for="searchKeyword">Keyword</label>
+                                    <input type="text" class="form-control form-control-sm mr-1" id="searchKeyword" placeholder="Enter Keywords">
                             </div>
                             <!-- <div class="col-sm-auto"> -->
                                 <!-- <div class="form-check"> -->
@@ -67,7 +67,7 @@
                             <!-- </div> -->
                         </div>
                         <div class="form-row">
-                            <button type="submit" class="btn btn-primary btn-sm ml-1">Search</button>        
+                            <button id="searchButton" type="submit" class="btn btn-primary btn-sm ml-1">Search</button>        
                         </div>
                     </form>
                 </div>
@@ -82,6 +82,9 @@
         </div>
     </div>
 
+    
+
+    <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="row">               
