--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,52 +28,31 @@
                 <!-- Dropdown Categories -->
                 <div class="col-12 col-sm-6 align-items-center">
                     <div class="row">
-                        <div class="dropdown ml-auto">
-                            <button class="dropdown-toggle btn mt-2" type="button" id="dropdownCategories" data-toggle="dropdown" aria-expanded="false">
-                                <span class="fa fa-bars"></span> Categories
+                        <div class="dropdown md-ml-auto">
+                            <button class="dropdown-toggle btn" type="button" id="dropdownCategories"
+                                data-toggle="dropdown" aria-expanded="false">
+                                <span class="fa fa-bars"></span><span class="text-uppercase text-truncate" 
+                                    id="selectedCategory" style="width: 8rem;"> Categories</span> 
                             </button>
                             <ul class="dropdown-menu" id="categories_menu" aria-labelledby="dropdownCategories">
                                 <!-- Categories Insertion -->
                             </ul>
                         </div>
-                        <span class="navbar-text align-middle">
-                            <a id="searchToggleButton" role="button" class="btn">
-                                <span class="fa fa-search"></span> Search
-                            </a>
-                        </span>
+                        <!-- Search Bar -->
+                        <form class="navbar-form" role="search">
+                            <div class="form-inline col-10 offset-2 col-md-12 offset-md-0">
+                                <input type="text" class="form-control col-9"
+                                    id="searchKeyword" placeholder="... looking for?">
+                                <button type="submit" class="btn btn-outline-dark" id="searchButton">
+                                    <span class="fa fa-search"></span>
+                                </button>
+                            </div>
+                        </form>
                     </div>           
                 </div>
             </div>
         </div>
     </header>
-
-    
-
-    <!-- Search Modal -->
-    <div id="searchModal" class="modal fade" role="dialog">
-        <div class="modal-dialog modal-lg" role="content">
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title">Search </h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <div class="modal-body">
-                    <form>
-                        <div class="form-row">
-                            <div class="form-group col-sm-12">
-                                    <label class="sr-only" for="searchKeyword">Keyword</label>
-                                    <input type="text" class="form-control form-control-sm mr-1" id="searchKeyword" placeholder="Enter Keywords">
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <button id="searchButton" type="submit" class="btn btn-primary btn-sm ml-1">Search</button>        
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- Products Cards -->
     <div class="container">
