--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,24 +26,24 @@
                     <h1><a id="title" href="/">Bsale Test</a></h1>
                 </div>
                 <!-- Dropdown Categories -->
-                <div class="col-12 col-sm-6 align-items-center">
+                <div class="col-12 col-sm-6">
                     <div class="row">
-                        <div class="dropdown md-ml-auto">
-                            <button class="dropdown-toggle btn" type="button" id="dropdownCategories"
+                        <div class="dropdown col-12 col-lg-6 justify-content-center">
+                            <button class="dropdown-toggle btn btn-outline-dark col-12" type="button" id="dropdownCategories"
                                 data-toggle="dropdown" aria-expanded="false">
                                 <span class="fa fa-bars"></span><span class="text-uppercase text-truncate" 
                                     id="selectedCategory" style="width: 8rem;"> Categories</span> 
                             </button>
-                            <ul class="dropdown-menu" id="categories_menu" aria-labelledby="dropdownCategories">
+                            <ul class="dropdown-menu col-11" id="categories_menu" aria-labelledby="dropdownCategories">
                                 <!-- Categories Insertion -->
                             </ul>
                         </div>
                         <!-- Search Bar -->
-                        <form class="navbar-form" role="search">
-                            <div class="form-inline col-10 offset-2 col-md-12 offset-md-0">
-                                <input type="text" class="form-control col-9"
+                        <form class="navbar-form col-12 col-lg-6 align-self-center" role="search">
+                            <div class="form-inline">
+                                <input type="text" class="form-control col-10"
                                     id="searchKeyword" placeholder="... looking for?">
-                                <button type="submit" class="btn btn-outline-dark" id="searchButton">
+                                <button type="submit" class="btn btn-outline-dark col-2" id="searchButton">
                                     <span class="fa fa-search"></span>
                                 </button>
                             </div>
