Top pagination + new colors

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,6 +54,15 @@
         </div>
     </header>
 
+    <!-- Pagination -->
+    <div class="container">
+        <nav >
+            <ul class="pagination pagination-sm justify-content-center paginationBar" id="paginationBar">
+                <!-- NavBar Pagination Insertion -->
+            </ul>
+          </nav>
+    </div>
+
     <!-- Products Cards -->
     <div class="container">
         
@@ -65,7 +74,7 @@
     <!-- Pagination -->
     <div class="container mt-5 mb-5">
         <nav >
-            <ul class="pagination justify-content-center" id="paginationBar">
+            <ul class="pagination pagination-sm justify-content-center paginationBar" id="paginationBar">
                 <!-- NavBar Pagination Insertion -->
             </ul>
           </nav>
