--- a/index.html
+++ b/index.html
@@ -26,54 +26,76 @@
                     <h1><a id="title" href="/">Bsale Test</a></h1>
                 </div>
                 <!-- Dropdown Categories -->
-                <div class="col-12 col-sm-6 align-items-center">
+                <div class="col-12 col-sm-6">
                     <div class="row">
-                        <div class="dropdown ml-auto">
-                            <button class="dropdown-toggle btn mt-2" type="button" id="dropdownCategories" data-toggle="dropdown" aria-expanded="false">
-                                <span class="fa fa-bars"></span> Categories
+                        <div class="dropdown col-12 col-lg-6 justify-content-center">
+                            <button class="dropdown-toggle btn btn-outline-dark col-12" type="button" id="dropdownCategories"
+                                data-toggle="dropdown" aria-expanded="false">
+                                <span class="fa fa-bars"></span><span class="text-uppercase text-truncate" 
+                                    id="selectedCategory" style="width: 8rem;"> Categories</span> 
                             </button>
-                            <ul class="dropdown-menu" id="categories_menu" aria-labelledby="dropdownCategories">
+                            <ul class="dropdown-menu col-11" id="categories_menu" aria-labelledby="dropdownCategories">
                                 <!-- Categories Insertion -->
                             </ul>
                         </div>
-                        <span class="navbar-text align-middle">
-                            <a id="searchToggleButton" role="button" class="btn">
-                                <span class="fa fa-search"></span> Search
-                            </a>
-                        </span>
+                        <!-- Search Bar -->
+                        <form class="navbar-form col-12 col-lg-6 align-self-center" role="search">
+                            <div class="form-inline">
+                                <input type="text" class="form-control col-10"
+                                    id="searchKeyword" placeholder="... looking for?">
+                                <button type="submit" class="btn btn-outline-dark col-2" id="searchButton">
+                                    <span class="fa fa-search"></span>
+                                </button>
+                            </div>
+                        </form>
                     </div>           
                 </div>
             </div>
         </div>
     </header>
 
-    
-
-    <!-- Search Modal -->
-    <div id="searchModal" class="modal fade" role="dialog">
-        <div class="modal-dialog modal-lg" role="content">
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title">Search </h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <div class="modal-body">
-                    <form>
-                        <div class="form-row">
-                            <div class="form-group col-sm-12">
-                                    <label class="sr-only" for="searchKeyword">Keyword</label>
-                                    <input type="text" class="form-control form-control-sm mr-1" id="searchKeyword" placeholder="Enter Keywords">
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <button id="searchButton" type="submit" class="btn btn-primary btn-sm ml-1">Search</button>        
-                        </div>
-                    </form>
-                </div>
-            </div>
+    <div class="container row row-content border col-10 offset-1 mt-3 justify-content-center">  
+        <!-- Dropdown ordering search option -->
+        <div class="dropdown col-12 col-sm-5 mt-3">
+            <label>Order by: </label>
+            <button class="dropdown-toggle btn btn-sm border-light" type="button" id="dropdownOrderingType"
+                data-toggle="dropdown" aria-expanded="false">
+                <span class="text-truncate" 
+                    id="selectedOrdering" style="width: 8rem;">Category</span> 
+            </button>
+            <ul class="dropdown-menu" id="ordering_menu" aria-labelledby="dropdownOrderingType">
+                <li><a id="ord-category_id"
+                    onClick="setOrdering('category_id')"
+                    class="dropdown-item active" role="button">Category</a>
+                </li>
+                <li><a id="ord-name"
+                    onClick="setOrdering('name')"
+                    class="dropdown-item" role="button">A - Z</a>
+                </li>
+                <li><a id="ord--name"
+                    onClick="setOrdering('-name')"
+                    class="dropdown-item" role="button">Z - A</a>
+                </li>
+                <li><a id="ord-price"
+                    onClick="setOrdering('price')"
+                    class="dropdown-item" role="button">Lower price first</a>
+                </li>
+                <li><a id="ord--price"
+                    onClick="setOrdering('-price')"
+                    class="dropdown-item" role="button">Higher price first</a>
+                </li>
+            </ul>
+        </div>
+        <!-- Top Pagination -->
+        <div class="col-12 col-sm-5 mt-3">
+            <nav >
+                <ul class="pagination pagination-sm justify-content-center paginationBar" id="paginationBar">
+                    <!-- NavBar Pagination Insertion -->
+                </ul>
+            </nav>
         </div>
     </div>
+    
 
     <!-- Products Cards -->
     <div class="container">
@@ -83,10 +105,10 @@
         </div>
     </div>
 
-    <!-- Pagination -->
+    <!-- Bottom Pagination -->
     <div class="container mt-5 mb-5">
         <nav >
-            <ul class="pagination justify-content-center" id="paginationBar">
+            <ul class="pagination pagination-sm justify-content-center paginationBar" id="paginationBar">
                 <!-- NavBar Pagination Insertion -->
             </ul>
           </nav>
